--- a/DDD/3장.md
+++ b/DDD/3장.md
@@ -156,4 +156,59 @@ public class ChangeOrderService{
 - Order가 root고 OrderLine이 root에 속하는 구성요소이므로 Order를 위한 repository만 존재한다.
 - aggregate는 개념적으로 하나이므로 repository는 aggregate 전체를 저장소에 영속화해야한다.
 - ex) Order와 관련된 table이 세개라면 Order aggregate를 저장할때 모든 테이블에 데이터를 저장해야한다.
-- 
+
+### ID를 이용한 aggregate참조
+- aggregate가 다른 aggregate를 참조한다는것은 다른 aggregate의 root를 참조한다는 말이다.
+```java
+public class Order{
+  private Orderer orderer;
+}
+
+public class Orderer{                             ->     public class Member{
+  private Member member;                          ->       private String name;
+  private String name;                            ->     }
+}
+```
+- 위와 같이 aggregate 참조를 사용하면 다른 aggregate의 데이터를 쉽게 조회할 수 있다.
+- ex) order.getOrderer().getMember().getName();
+- 하지만 편리함 오용, 성능, 확장의 어려움과 같은 문제점이 존재한다.
+  - aggregate간 의존 결합도를 높임
+  - 성능 고려간 JPA 사용시 참조 방식을 즉시로딩으로 할지 지연로딩으로할지 고민이 필요하다. 연관된 객체를 모두 보여주어야 할때는 즉시로딩, aggregate의 상태변경시에는 지연로딩
+  - 확장시 다른 DBMS를 사용하게 된다면? 단일 기술을 사용할 수 없다.
+
+ 위의 문제를 해결하기 위해 ID를 이용해 다른 aggregate를 참조하는 방식을 사용한다.
+ ```java
+public class Order{
+  private Orderer orderer;
+}
+
+public class Orderer{                             ->     public class Member{
+  private Member memberId;                        ->       private MemberId id;
+  private String name;                            ->       private String name;
+                                                  ->     }
+}
+```
+- 이렇게하면 한 aggregate에 속한 객체들만 참조로 연결된다.
+- 각 aggregate별 경계를 명확히하고, 물리적 연결을 제거해 복잡도를 줄여준다.
+- 이렇게 하면 다른 aggregate의 상태를 변경할 수 없게 된다.
+- 또한 aggregate별로 다른 기술을 적용할 수도 있게된다.
+
+ID를 이용한 참조와 조회 성능
+- 다른 aggregate를 id로 참조하면 참조하는 여러 aggregate를 읽을때 조회 속도가 문제될 수 있다.
+- ex) 주문목록 조회시 상품, 회원을 함께 읽어오는데 jpa를 사용하면 n+1 조회 문제가 발생할 수 있다.
+- 이를 해결하기 위해서는 jpql로 조회쿼리를 만드는걸 추천한다.
+
+### Aggregate 간 집합 연관
+- 1:N, M:N 연관
+- 만약 aggregate 간에 1:N 연관이 있더라도 1개 조회시 n번의 쿼리를 수행하는 비효율적인 로직이 생긴다면, 1:N 연관을 실제로 구현하지 않는걸 추천한다.
+```java
+public class Category{
+  private Set<Product> products;
+
+  public List<Product> getProducts(int page, int size){
+    List<Product> sortedProducts = sortById(products);
+    return sortedProducts.subList((page - 1) * size, page * size);
+  }
+}
+```
+- 위 코드를 보게되면, Category에 속한 모든 Product를 조회하게 된다. Product의 수가 많다면 실행속도에 심각한 문제가 발생한다.
