--- a/DDD/3장.md
+++ b/DDD/3장.md
@@ -196,11 +196,10 @@ public class Orderer{                             ->     public class Member{
 ID를 이용한 참조와 조회 성능
 - 다른 aggregate를 id로 참조하면 참조하는 여러 aggregate를 읽을때 조회 속도가 문제될 수 있다.
 - ex) 주문목록 조회시 상품, 회원을 함께 읽어오는데 jpa를 사용하면 n+1 조회 문제가 발생할 수 있다.
-- 이를 해결하기 위해서는 jpql로 조회쿼리를 만드는걸 추천한다.
+- 이를 해결하기 위해서는 jpql로 조인하여 조회하는 쿼리를 만드는걸 추천한다.
 
 ### Aggregate 간 집합 연관
-- 1:N, M:N 연관
-- 만약 aggregate 간에 1:N 연관이 있더라도 1개 조회시 n번의 쿼리를 수행하는 비효율적인 로직이 생긴다면, 1:N 연관을 실제로 구현하지 않는걸 추천한다.
+1:N, M:N 연관
 ```java
 public class Category{
   private Set<Product> products;
@@ -212,3 +211,71 @@ public class Category{
 }
 ```
 - 위 코드를 보게되면, Category에 속한 모든 Product를 조회하게 된다. Product의 수가 많다면 실행속도에 심각한 문제가 발생한다.
+- 그래서 aggregate 간에 1:N 연관이 있더라도 1개 조회시 n번의 쿼리를 수행하는 비효율적인 로직이 생긴다면, 1:N 연관을 실제로 구현하지 않는걸 추천한다.
+- 위의 로직은 상품에서 자신이 속한 Category를 N-1로 연관지어 구현해 해결하면 된다.
+```java
+public class Product{
+  private CategoryId categoryId;
+}
+
+public class ProductListService{
+  public Page<Product> getProductOfCategory(Long categoryId, int page, int size){
+    Category category = categoryRepository.findById(categoryId);
+    checkCategory(category);
+
+    List<Product> products = productRepository.findByCategoryId(category.getId(), page, size);
+    int totalCount = productRepository.countsByCategoryId(category.getId());
+
+    return new Page(page,size,totalCounts,products);
+  }
+}
+```
+- M:N 연관도 마찬가지로 구현에 포함시킬지를 결정해야한다.
+
+### aggergate를 factory로 사용하기
+```java
+public class RegisterProductservcice{
+
+  public ProductId registerNewProduct(NewProductRequest req){
+    Store store = storeRepository.findById(req.getStoreId());
+    checkNull(store);
+    if(store.isBlocked()) throw new StoreBlockedException();
+
+    ProductId id = productRepository.nextId();
+    Product product = new Product(id, store.getId());
+    productRepository.save(product);
+
+    return id;
+  }
+}
+```
+- 위의 로직은 차단당한 계정은 상품은 못만들게 하는 예외처리 로직 / 상품을 등록하는 로직이 application layer에 같이 있는 코드이다.
+- 상품을 등록하는 로직을 Store aggregate로 옮겨보자
+```java
+public class Store{
+  public Product createProduct(ProductId newProductId, ...){
+    if(store.isBlocked()) throw new StoreBlockedException();
+    return new Product(newProductId, ...);
+  }
+}
+```
+- Store aggregate의 createProduct()는 Product aggregate를 생성하는 팩토리 역할을 한다.
+- 이제 다시 코드를 수정해보자.
+```java
+public class RegisterProductservcice{
+
+  public ProductId registerNewProduct(NewProductRequest req){
+    Store store = storeRepository.findById(req.getStoreId());
+    checkNull(store);   
+
+    ProductId id = productRepository.nextId();
+    Product product = store.createProduct(id, ...);
+    productRepository.save(product);
+
+    return id;
+  }
+}
+```
+- Product의 생성가능여부를 체크하는 로직을 Store에서 처리하기만 하면 된다.
+- application layer에서는 더 이상 domain의 수정사항을 확인할 필요가 없다.
+- aggregate가 갖고있는 데이터를 이용해서 다른 aggregate를 생성해야한다면, aggregate에 팩토리 메서드를 구현하는것을 고려해보자.
