--- a/DDD/4장.md
+++ b/DDD/4장.md
@@ -1,2 +1,7 @@
+# Repository와 모델 구현
 #### JPA를 이용한 repository 구현
-모듈의 위치
+repository 모듈의 위치는 infraStructure 위치한다.
+```
+domain layer                         |  infraStructure layer
+Model - ModelRepository(interface)   -  JpaModelRepository(concrete class)
+```
