--- a/DDD/4장.md
+++ b/DDD/4장.md
@@ -5,3 +5,12 @@ repository 모듈의 위치는 infraStructure 위치한다.
 domain layer                         |  infraStructure layer
 Model - ModelRepository(interface)   -  JpaModelRepository(concrete class)
 ```
+- 위 처럼 concrete class를 infrastructure 위치에 두어서 infrastructure에 대한 의존을 낮춰야 한다.
+
+repository 기본 기능 구현
+- 기본 기능은 두가지이다
+  - ID로 aggregate 조회하기
+  - aggregate 저장하기
+- 인터페이스는 aggregate root를 기준으로 작성한다.
+- ex) Order(root entity), OrderLine, Orderer, ShippingInfo가 있다면 Order를 기준으로 repository 인터페이스를 작성한다.
+- 조회하는 기능의 이름은 보통 "findBy프로퍼티명" 으로 작성한다.
