--- a/DDD/4장.md
+++ b/DDD/4장.md
@@ -14,3 +14,69 @@ repository 기본 기능 구현
 - 인터페이스는 aggregate root를 기준으로 작성한다.
 - ex) Order(root entity), OrderLine, Orderer, ShippingInfo가 있다면 Order를 기준으로 repository 인터페이스를 작성한다.
 - 조회하는 기능의 이름은 보통 "findBy프로퍼티명" 으로 작성한다.
+- 삭제의 경우 요구사항이 있더라도 실제도 데이터를 삭제하는 경우는 많지 않다. 보통은 flag를 두어 화면에 보여줄 대상인지를 체크한다.
+
+spirng data JPA를 이용한 repository 구현
+- JPA reopository interface를 정의하면 spring에서 concrete class를 구현해준다.
+- OrderNo타입을 식별자로하는 Order entity이다.
+```java
+@Entity
+@Table(name = "purchase_order")
+@Access(AccessType.FIELD)
+public class Order {
+    @EmbeddedId
+    private OrderNo number;
+}
+```
+- OrderRepsitory는 다음과 같이 구현한다.
+```java
+public interface OrderRepository extends Repository<Order, OrderNo> {
+    Optional<Order> findById(OrderNo id);
+    void save(Order order);
+}
+```
+### mapping 구현
+- aggregate root는 entity이므로 @Entity로 mapping한다.
+- 한 테이블안에 value와 entity가 같이있다면
+  - value는 @Embeddable로 mapping 설정한다.
+  - value type의 property는 @Embeded로 mapping 설정한다.
+- 주문을 예로들어 볼때, Root Entity는 Order이고 하위에 속하는 Orderer, ShippingInfo는 value이다.
+- Root Entity는 @Entity로 mapping
+- 하위 value인 Orderer는 @Embedded를 이용
+```java
+@Entity
+@Table(name = "purchase_order")
+@Access(AccessType.FIELD)
+public class Order {
+    @EmbeddedId
+    private OrderNo number;
+
+    @Embedded
+    private Orderer orderer;
+}
+```
+- Order에 속하는 Orderer는 value이므로 @Embeddable로 설정
+- MemberId의 id라는 field를 Orderer에서는 orderer_id로 사용해야하기 때문에 AttributeOverrides설정
+```java
+@Embeddable
+public class Orderer {
+
+    //MemberId에 정의된 컬럼 이름을 변경하기 위해
+    @AttributeOverrides(
+            @AttributeOverride(name = "id", column = @Column(name = "orderer_id"))
+    )
+    private MemberId memberId;
+
+    @Column(name = "orderer_name")
+    private String name;
+}
+
+@Embeddable
+public class MemberId implements Serializable {
+    @Column(name = "member_id")
+    private String id;
+}
+```
+
+기본 생성자
+
