--- a/DDD/4장.md
+++ b/DDD/4장.md
@@ -79,4 +79,42 @@ public class MemberId implements Serializable {
 ```
 
 기본 생성자
+- 불변타입의 value는 setter 메서드를 제공하지 않는다.
+- 파라미터가 없는 기본 생성자 또한 필요가 없다는 말이다.
+- 하지만, JPA에서는 @Entity와 @Embededable로 클래스를 매핑하려면 파라미터가 없는 기본 생성자가 필요하다.
 
+```java
+@Embeddable
+public class Receiver {
+    @Column(name = "receiver_name")
+    private String name;
+    @Column(name = "receiver_phone")
+    private String phone;
+
+    protected Receiver() {} //JPA 적용을 위해
+
+    public Receiver(String name, String phone) {
+        this.name = name;
+        this.phone = phone;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public String getPhone() {
+        return phone;
+    }
+}
+```
+- 위의 기본 생성자는 JPA provider가 객체를 생성할때만 사용한다.
+- 다른 코드에서 사용하면 값이 올바르지 못한 객체를 만드므로, protected로 설정하였다.
+
+필드 접근 방식 사용
+- entity가 제 역할을 하기위해선, 외부에 setter를 사용하기보다 의도가 잘 드러나는 기능을 제공해야 한다.
+```
+주문 상태변경을 위해 setState()보다는 취소시 cancel()을 사용
+배송지를 변경하기 위해 setShippingInfo() 보다는 changeShippingInfo()를 사용
+```
+- 객체가 제공할 기능을 중심으로 entity를 구현하려면
+- @Access(AccessType.FIELD)로 선언하여 getter와 setter는 구현하지 말아야한다.
