--- a/DDD/4장.md
+++ b/DDD/4장.md
@@ -118,3 +118,213 @@ public class Receiver {
 ```
 - 객체가 제공할 기능을 중심으로 entity를 구현하려면
 - @Access(AccessType.FIELD)로 선언하여 getter와 setter는 구현하지 말아야한다.
+```java
+Access Field 방식
+@Entity
+@Access(AccessType.FIELD)// 생략 가능
+public class Member {
+
+    @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    @Transient
+    private String firstName;
+    @Transient
+    private String lastName;
+  ...
+}
+Access Property 방식
+@Entity
+@Access(AccessType.PROPERTY)// 생략 가능
+public class Member {
+    private Long id;
+    private String firstName;
+    private String lastName;
+
+    @Id
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+    @Transient
+    public String getFirstName() {
+        return firstName;
+    }
+
+    public void setFirstName(String firstName) {
+        this.firstName = firstName;
+    }
+    @Transient  
+    public String getLastName() {
+        return lastName;
+    }
+
+    public void setLastName(String lastName) {
+        this.lastName = lastName;
+    }
+}
+```
+AttributeConverter를 이용한 value mapping
+- @AttributeConverter는 한 컬럼에 길이값과 단위 두 프로퍼티를 저장하고 싶을때 사용할 수 있다.
+```java
+public class Length{
+  private int value; //1000
+  private String unit; //cm
+}
+
+-> WIDTH VARCHAR(20) //1000cm
+```
+- EmailSet은 value type, String은 DB type
+- autoApply라는 속성을 통해 Converter를 자동으로 적용할지, 명시할지를 지정한다.
+```java
+@Converter(autoApply = true)
+public class EmailSetConverter implements AttributeConverter<EmailSet, String> {
+    @Override
+    public String convertToDatabaseColumn(EmailSet attribute) {
+        if (attribute == null) return null;
+        return attribute.getEmails().stream()
+                .map(email -> email.getAddress())
+                .collect(Collectors.joining(","));
+    }
+
+    @Override
+    public EmailSet convertToEntityAttribute(String dbData) {
+        if (dbData == null) return null;
+        String[] emails = dbData.split(",");
+        Set<Email> emailSet = Arrays.stream(emails)
+                .map(value -> new Email(value))
+                .collect(toSet());
+        return new EmailSet(emailSet);
+    }
+}
+
+@Entity
+@Table(name = "member")
+public class Member {
+    @EmbeddedId
+    private MemberId id;
+
+    @Column(name = "emails")
+    @Convert(converter = EmailSetConverter.class)
+    private EmailSet emails;
+
+    protected Member() {}
+
+    public Member(MemberId id, String name) {
+        this.id = id;
+        this.name = name;
+    }
+
+    public MemberId getId() {
+        return id;
+    }
+
+    public String getName() {
+        return name;
+    }
+    public EmailSet getEmails() {
+        return emails;
+    }
+}
+```
+Value Collection
+별도 테이블 mapping
+- root aggregate인 Order는 한개이상의 Orderline을 가질 수 있다.
+- OrderLine에 순서가 있다면?
+```java
+@Entity
+@Table(name = "purchase_order")
+public class Order {
+    @EmbeddedId
+    private OrderNo number;
+
+    @ElementCollection(fetch = FetchType.LAZY)
+    @CollectionTable(name = "order_line", joinColumns = @JoinColumn(name = "order_number"))
+    @OrderColumn(name = "line_idx")
+    private List<OrderLine> orderLines;
+}
+```
+- @OrderColumn(name = "line_idx") 순서와 관련된 인덱스값(List의 0 ,1,2 ...)을 line_idx라는 db 컬럼에 저장한다.
+- @CollectionTable은 value를 저장할 db 테이블을 명시한다.
+- @JoinColumn은 외부키로 사용할 db 컬럼을 명시한다.
+
+한 개 column mapping
+- AttributeConverter를 이용하여 value collection을 한개의 column에 mapping한다.
+
+value를 이용한 ID mapping
+- 식별자 자체를 @EmbeddedId를 통해 value type으로 만들 수 있다.
+- 이렇게 하면 식별자에 기능을 추가할 수 있다.
+- JPA에서 식별자는 Serializable tpye이여야 한다.
+```java
+@Entity
+@Table(name = "member")
+public class Member {
+    @EmbeddedId
+    private MemberId id;
+}
+
+@Embeddable
+public class MemberId implements Serializable {
+    @Column(name = "member_id")
+    private String id;
+
+    //식별자에 기능을 추가한다
+    public is2ndVersion(){
+      return id.startWith("v2")
+    }
+}
+```
+별도 테이블에 저장하는 value mapping
+- aggregate에서 root entity를 뺀 나머지 구성요소는 대부분 value이다.
+- 구성요소가 value인지 entity인지 확인하기 위해서 고유 식별자를 갖는지 확인한다.
+- 하지만 식별자를 생각할때 table의 식별자와 aggregate의 고유 식별자가 동일하다고 착각하면 안된다.
+```
+테이블
+Article - Article Contents
+
+여기서 Article Contents이 ID column을 갖고있다면?
+Article Contents는 Article의 내용을 담고있는 value로 생각하는 것이 맞다.
+```
+- 이렇게 value property가 다른 테이블일때는? @SecondaryTable, @AttributeOverride를 사용한다.
+- @SecondaryTable의 name은 value를 저장할 테이블 PrimaryKeyJoinColumn는 value(article contents) -> entity(article)로 join할 column명
+- @AttributeOverride value 데이터가 저장된 이름
+```java
+@Entity
+@Table(name = "article")
+@SecondaryTable(
+        name = "article_content",
+        pkJoinColumns = @PrimaryKeyJoinColumn(name = "id")
+)
+public class Article {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    private String title;
+
+    @AttributeOverrides({
+            @AttributeOverride(
+                    name = "content",
+                    column = @Column(table = "article_content", name = "content")),
+            @AttributeOverride(
+                    name = "contentType",
+                    column = @Column(table = "article_content", name = "content_type"))
+    })
+    @Embedded
+    private ArticleContent content;
+
+    protected Article() {
+    }
+}
+```
+이렇게 만든 테이블을 조회할때 문제가 발생한다
+- Article의 제목 목록만 조회를 원할때? 이렇게하면 내용까지 모두 조회가 된다.
+- lazy loading을 하게되면? ArticleContents도 entity가 된다고 볼 수 있다.
+- 그래서 조회 전용 기능을 구현하는 것이 좋다.(5장 11장 참고)
+```
+Article article = entityManger.find(Article.class,1L);
+```
+
+Value Collection을 @Entity로 mapping하기
