--- a/DDD/4장.md
+++ b/DDD/4장.md
@@ -328,3 +328,116 @@ Article article = entityManger.find(Article.class,1L);
 ```
 
 Value Collection을 @Entity로 mapping하기
+- JPA는 @Embeddable 타입 클래스의 상속 mapping을 지원하지 않는다.
+- 상속 구조를 갖는 value type을 사용하려면 @Entity를 이용해야한다.
+```java
+product                   |          image
+PRODUCT_ID (varchar(20))             IMAGE_ID (varchar(20))
+                                     PRODUCT_ID (varchar(20))
+```
+- @Inheritance 적용
+- strategy로 SINGLE_TABLE 적용
+- @DiscriminatorColumn을 이용해서 타입 구분용으로 사용할 column 지정
+```java
+@Entity
+@Inheritance(strategy = InheritanceType.SINGLE_TABLE)
+@DiscriminatorColumn(name = "image_type")
+@Table(name = "image")
+public abstract class Image {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "image_id")
+    private Long id;
+
+    @Column(name = "image_path")
+    private String path;
+
+    @Column(name = "upload_time")
+    private LocalDateTime uploadTime;
+
+    protected Image() {
+    }
+
+    public Image(String path) {
+        this.path = path;
+        this.uploadTime = LocalDateTime.now();
+    }
+
+    protected String getPath() {
+        return path;
+    }
+
+    public LocalDateTime getUploadTime() {
+        return uploadTime;
+    }
+}
+```
+- 상속받은 두 image value
+- @DiscriminatorValue를 통해 mapping을 지정한다.
+```java
+@Entity
+@DiscriminatorValue("EI")
+public class ExternalImage extends Image {
+    protected ExternalImage() {
+    }
+
+    public ExternalImage(String path) {
+        super(path);
+    }
+}
+
+
+@Entity
+@DiscriminatorValue("II")
+public class InternalImage extends Image {
+    protected InternalImage() {
+    }
+
+    public InternalImage(String path) {
+        super(path);
+    }
+}
+```
+- Product는 @OneToMany로 Item을 mapping
+```java
+@Entity
+@Table(name = "product")
+public class Product {
+    @EmbeddedId
+    private ProductId id;
+
+    @Convert(converter = MoneyConverter.class)
+    private Money price;
+
+    @OneToMany(cascade = {CascadeType.PERSIST, CascadeType.REMOVE},
+            orphanRemoval = true, fetch = FetchType.LAZY)
+    @JoinColumn(name = "product_id")
+    @OrderColumn(name = "list_idx")
+    private List<Image> images = new ArrayList<>();
+
+    protected Product() {
+    }
+
+    public Product(ProductId id, String name, Money price, String detail, List<Image> images) {
+        this.id = id;
+        this.name = name;
+        this.price = price;
+        this.detail = detail;
+        this.images.addAll(images);
+    }
+
+    public void changeImages(List<Image> newImages) {
+        images.clear();
+        images.addAll(newImages);
+    }
+}
+```
+- 여기서 changeImages의 clear() method는 @Entity에서 효율이 좋지않다.
+- image들을 각각 product_id로 조회 후, 각각의 image_id로 delete 쿼리를 수행한다.
+- 이를 @Embeddable로 구현하게 되면 image들을 각각 product_id로 조회 후, 한번에 delete 쿼리를 수행한다.
+- 성능을 유지하고 싶다면 상속을 포기하고 @Embeddable로 된 하위 클래스를 구현해야한다.
+
+### Aggregate Loading 전략
+- Aggregate에 속한 객체가 모두 모여야 완전한 하나여야 한다.
+- 즉시로딩을 이용하게되면 aggregate root를 로딩하는 시점에 aggregate에 속한 모든 객체를 로딩할 수 있다.
+- 
