--- a/DDD/4장.md
+++ b/DDD/4장.md
@@ -440,4 +440,22 @@ public class Product {
 ### Aggregate Loading 전략
 - Aggregate에 속한 객체가 모두 모여야 완전한 하나여야 한다.
 - 즉시로딩을 이용하게되면 aggregate root를 로딩하는 시점에 aggregate에 속한 모든 객체를 로딩할 수 있다.
-- 
+- aggregate는 개념적으로 하나여야 하나, root entity를 호출하는 시점에 모두 로딩해야하는것은 아니다.
+- 예를 들어 지연로딩으로 상태변경시(chagneShippingInfo - 배송지 변경) 발생하는 추가 쿼리로 인한 실행 속도의 저하는 보통 문제가 되지 않는다.
+- 물론 즉시로딩보다 지연로딩이 쿼리 실행 횟수가 많아질 가능성이 높다.
+- 그래서 aggregate에 맞게 Loading 전략을 선택해야 한다.
+
+### Aggregate의 영속성 전파
+- 저장과 삭제시 aggregate root만 하지 않고, 속한 모든 aggregate를 처리해야한다.
+- @OneToMany, @OneToOne는 CascadeType.PERSIST, CascadeType.REMOVE를 설정한다.
+
+### 식별자 생성 가능
+- 사용자가 직접 생성
+  - 이메일 주소와 같이 사용자가 입력하는 부분은 도메인 영역에 위치
+  - 도메인 로직으로 생성
+- DB를 이용한 일련번호 사용
+  - @GeneratedValue를 사용
+
+### 도메인 구현과 DIP
+- 특정 기술에 의존하지 않는 순수한 도메인 모델을 추구하기 위해서는 인프라에 concrete class를 위치시켜야 하나 이번장에서 만든 예제는 모두 도메인 위치에 존재
+- DIP를 완벽하게 지키면 좋겠지만, 개발의 편의성과 실용성을 가져가면서 구조적인 유연함을 가져가는 방식을 택함
