--- a/DDD/5장.md
+++ b/DDD/5장.md
@@ -3,3 +3,88 @@
 - 정렬, 페이징, 검색조건 지정 등 조회와 관련된 기능을 알아보자
 
 ### 검색을 위한 스펙
+목록조회와 같이 다양한 검색 조건을 조합해야할때, 검색 조건을 조합할때 사용할 수 있는것을 스펙이라고 한다.
+```java
+public interface Specification<T>{}
+  public boolean isSatisfiedBy(T agg);
+}
+```
+- Order aggregate 객체가 특정 고객의 주문인지 확인하는 스펙은 아래와 같이 구현 가능하다.
+```java
+public class OrderSpec implements Specification<Order>{
+  private String ordererId;
+
+  public OrderSpec(Strin ordererId){
+    this.ordererId = ordererId;
+  }
+
+  public boolean isSatisfiedBy(Order agg){
+    return agg.getOrdererId().getMemberId().getid().equals(ordererId);
+  }
+}
+```
+- repository가 스펙을 이용해서 검색 대상을 걸러주므로 특정 조건을 충족하는 aggregate를 찾고 싶으면, 원하는 스펙을 만들어서 전달해주면 된다.
+```java
+  Specification<Order> orderSpec = new OrderSpec(madvirus);
+  //repository에 전달
+  List<Order> orders = orderRepository.findAll(orderSpec);
+```
+- 하지만 실제 스펙은 이렇게 구현하지 않는다.
+- 모든 aggregate 객체를 보관하기도 어렵고 성능상 문제가 있기 때문
+
+### Spring Data JPA를 이용한 스펙 구현
+- Spring Data JPA에서는 검색조건을 표현하기 위한 인터페이스인 Specification을 제공한다.
+- 스펙 구현 클래스를 개별적으로 만들지 않고 별도의 클래스에 스펙 생성 기능을 모아도 된다.
+```java
+public class OrderSummarySpecs {
+    public static Specification<OrderSummary> ordererId(String ordererId) {
+        return (Root<OrderSummary> root, CriteriaQuery<?> query, CriteriaBuilder cb) ->
+                cb.equal(root.<String>get("ordererId"), ordererId);
+    }
+
+    public static Specification<OrderSummary> orderDateBetween(
+            LocalDateTime from, LocalDateTime to) {
+        return (Root<OrderSummary> root, CriteriaQuery<?> query, CriteriaBuilder cb) ->
+                cb.between(root.get(OrderSummary_.orderDate), from, to);
+    }
+}
+```
+
+### Repository/DAO에서 스펙 사용하기
+- 스펙을 충족하는 entity를 찾고싶다면? findAll 메서드를 사용하면 된다.
+```java
+//Repository를 사용하면 필요한 메서드만 개방, 테스트간 용이함(구현할것이 적음 jparepository나 crud repository에 비해)
+public interface OrderSummaryDao extends Repository<OrderSummary, String> {
+    List<OrderSummary> findAll(Specification<OrderSummary> spec);
+}
+```
+
+### 스펙 조합
+- and, or 메서드를 통해 스펙을 조합할 수 있다.
+- 위의 메서드를 통해 불필요한 변수선언을 제거할 수 있다.
+```java
+Specificataion<OrderSummary> spec = OrderSummarySpecs.ordererId("user1")
+                                    .and(OrderSummarySpecs.orderDateBetween(from, to));
+```
+- not 메서드도 제공한다.
+- where 메서드를 통해 null을 전달하면 아무 조건도 생성하지 않으며, null이면 받은 스펙 객체를 그대로 리턴한다.
+
+### 정렬 지정하기
+- Spring Data JPA는 두 가지 방법을 사용해서 정렬을 지정할 수 있다.
+  - 메서드 이름에 OrderBy를 사용해서 정렬기준 지정
+  - sort를 인자로 전달
+```java
+List<MemberData> findFirst3ByNameLikeOrderByName(String name);
+```
+- 두 개 이상의 property에 대한 정렬 순서를 지정할 수도 있다.
+```java
+findByOrdererIdOrderByOrderDateDescNumberAsc
+```
+- 위와같이 propery가 많아지면 이름이 복잡해진다. 이럴때는 sort type을 사용해 해결할 수 있다.
+```java
+List<OrderSummary> findByOrdererId(String memberId, Sord srot);
+
+Sort sort = Sort.by("number").ascending();
+```
+
+### Paging 처리하기
