--- a/DDD/5장.md
+++ b/DDD/5장.md
@@ -88,3 +88,85 @@ Sort sort = Sort.by("number").ascending();
 ```
 
 ### Paging 처리하기
+- Pageable 타입을 사용하면 페이징을 자동으로 처리해준다.
+- Pageable타입을 사용하는 메서드의 return타입이 Page라면 COUNT 쿼리도 실행해서 데이터 개수를 구한다.
+- 처음부터 N개의 데이터가필요하다면? findFirstN 형식의 메서드를 사용할 수 있다.
+```java
+List<MemeberData> findFirst3ByNameLikeOrderByName(String name)
+```
+
+### spec 조합을 위한 spec builder class
+- spec을 생성하다 보면 조건에따라 spec을 조합해야할 일이 생긴다.
+- 이때 builder pattern을 적용하여 가독성을 높이자
+```java
+public class SpecBuilder {
+    public static <T> Builder<T> builder(Class<T> type) {
+        return new Builder<T>();
+    }
+
+    public static class Builder<T> {
+        private List<Specification<T>> specs = new ArrayList<>();
+
+        public Builder<T> and(Specification<T> spec) {
+            specs.add(spec);
+            return this;
+        }
+
+        public Builder<T> ifHasText(String str,
+                                    Function<String, Specification<T>> specSupplier) {
+            if (StringUtils.hasText(str)) {
+                specs.add(specSupplier.apply(str));
+            }
+            return this;
+        }
+
+        public Builder<T> ifTrue(Boolean cond,
+                                 Supplier<Specification<T>> specSupplier) {
+            if (cond != null && cond.booleanValue()) {
+                specs.add(specSupplier.get());
+            }
+            return this;
+        }
+
+        public Specification<T> toSpec() {
+            Specification<T> spec = Specification.where(null);
+            for (Specification<T> s : specs) {
+                spec = spec.and(s);
+            }
+            return spec;
+        }
+    }
+}
+```
+
+### 동적 instance 생성
+- 쿼리의 결과에서 임의의 객체를 동적으로 생성한 결과이다.
+```java
+@Query("""    
+            select new com.myshop.order.query.dto.OrderView(
+                o.number, o.state, m.name, m.id, p.name
+            )
+            from Order o join o.orderLines ol, Member m, Product p
+            where o.orderer.memberId.id = :ordererId
+            and o.orderer.memberId.id = m.id
+            and index(ol) = 0
+            and ol.productId.id = p.id
+            order by o.number.number desc
+            """)
+    List<OrderView> findOrderView(String ordererId);
+```
+- 이러한 조회전용 모델을 만드는 이유는? presentation layer에서 사용자에게 데이터를 보여주기 위함
+- 동적 instance의 장점은 JPQL을 그대로 사용하므로 객체 기준으로 쿼리를 작성하며, 지연/즉시 로딩과 같은 고민없이 데이터를 조회할 수 있다는 점이다.
+
+### hibernate @Subselect 사용
+- @Subselect는 조회 쿼리를 값처럼 사용한다.(sub query라 보면됨)
+- @Subselect를 통해 조회한 @Entity 역시 수정할 수 없다.
+```java
+Order order = orderRepository.findById(orderNumber);
+order.changeShippingInfo(newInfo); //상태 변경
+
+//상태 변경이 반영되기전에(commit 전)조회함
+List<OrderSummary> summaries = orderSummaryRepository.findByOrdererId(userId);
+```
+- 위의 경우 데이터가 commit 되기 전에 읽게되는 경우인데 최신값을 담기위해선? @Synchronize를 사용하여 이를 해결할 수 있다.
+- @Synchronize로 관련된 테이블을 명시해주면, OrderSummary의 entity를 로딩하기전에 변경이 감지되면 flush를 진행 후 조회할 수 있도록 해준다.
