--- a/DDD/6장.md
+++ b/DDD/6장.md
@@ -1,1 +1,6 @@
 # 응용 서비스와 표현 영역
+- presentation layer는 사용자의 요청을 해석한다.
+- 실제 사용자가 원하는 기능을 제공하는것은 application layer에 위치한 서비스이다.
+- 사용자와의 상호작용은 presentation layer, 실행에 필요한 값을 받고 실행 결과만 리턴하는 부분은 application layer에서 진행해야한다.
+
+### 응용 서비스의 역할
