--- a/DDD/6장.md
+++ b/DDD/6장.md
@@ -4,3 +4,171 @@
 - 사용자와의 상호작용은 presentation layer, 실행에 필요한 값을 받고 실행 결과만 리턴하는 부분은 application layer에서 진행해야한다.
 
 ### 응용 서비스의 역할
+- 응용 서비스는 사용자가 요청한 기능을 실행한다.
+- 응용 서비스는 주로 도메인 객체간의 흐름을 제어한다.
+```java
+public Result doSomeFunction(SomeRequest req){
+  //1. repository에서 aggregate를 구함
+  SomeAgg agg = someAggregateRepository.fidnById(req.getId());
+
+  //2. aggregate의 domain 기능을 실행
+  agg.doSomeFunction(req.getValue());
+
+  //3. 결과를 반환
+  return createResult(agg);
+}
+```
+- 새로운 aggregate를 생성하는 응용서비스 역시 간단하다.
+```java
+public Result doSomeCreation(CreateSomeRequest req){
+  //1. 데이터 중복 등 데이터 유효성 검사를 진행
+  validate(req);
+
+  //2. aggregate를 생성
+  SomeAgg newAgg = createSome(req);
+
+  //3. repository에 aggregate를 저장
+  someAggRepository.save(newAgg);
+
+  //4. 결과를 반환
+  return createResult(newAgg);
+}
+```
+- 응용 서비스는 위처럼 간단해야하며, 복잡하다면 domain의 기능을 구현하고 있을 가능성이 높다.
+- 응용 서비스에서 domain의 기능을 구현하게된다면 코드 중복, 로직 분산 등 코드 품질에 안좋은 영향을 줄 수 있다.
+- 응용 서비스는 transaction 처리도 담당한다.
+```java
+public void blockMembers(String[] blockingIds){
+  if(blockingIds == null || blockingIds.length == 0) return ;
+  List<Member> members = memberRepository.findByIdIn(blockingIds);
+  for(Member mem : members){
+    mem.block();
+  }
+}
+```
+- 위의 blockMembers method는 트랜잭션 범위에서 실행이 필요하다.
+- 그래서 응용서비스에서 이를 고려하여 트랜잭션을 실행해야한다.
+- 도메인 로직은 도메인 영역에 위치하고, 응용 서비스는 도메인 로직을 구현하지 않는다.
+- ex)비밀번호 변경 응용 서비스
+```java
+public class changePasswordService{
+  public void changePassword(String memberId String oldPw, String newPw) {
+        Member member = memberRepository.findById(memberId);
+        checkMemberExists(member);
+        member.changePassword(olrdPw, newPw);
+    }
+}
+```
+- Member aggregate
+```java
+public class Member{
+  public void changePassword(String oldPw, String newPw) {
+        if (!matchPassword(oldPw))  throw new IdPasswordNotMatchingException();        
+        this.password = new Password(newPw);
+    }
+
+  public boolean matchPassword(String pwd){
+    return passwordEncoder.matches(pwd);
+  }
+}
+```
+- 만약 위의 matchPassword를 응용 서비스에서 구현했다면?
+- 해당 기능을 사용한 다른 응용서비스가 추가 되었을때 문제가 발생한다.
+```java
+public class DeactivationService{
+  public void deactivation(String memberId, String pwd){
+    Member member = memberRepository.findById(memberId);
+    checkMemberExists(member);
+
+    //응용서비스에서 비밀번호 일치여부 확인이라는 domain 로직 구현
+    if (!matchPassword(oldPw))  throw new IdPasswordNotMatchingException();
+    member.deactivate();
+  }
+}
+```
+- 위의 코드에서처럼 중복이 발생하여 aggregate의 응집도가 떨어지고 코드의 변경이 복잡해진다.
+
+### 응용 서비스의 구현
+#### 응용 서비스의 크기
+- 응용 서비스는 보통 두가지 방법 중 한 가지 방식으로 구현한다
+  - 한 응용 서비스에 모든 기능 구현하기
+  - 구분되는 기능별로 service class 구현하기
+
+**한 응용 서비스에 모든 기능 구현하기**
+- 동일 로직에대한 코드 중복을 제거하기 쉽다는 장점이 있다.
+- 한 서비스의 클래스의 크기가 커진다.(가독성이 좋지 않음)
+  
+**구분되는 기능별로 service class 구현하기**
+- 2 ~ 3개의 기능을 구현한다.
+- 클래스는 많아지지만 각 클래스별로 필요한 의존 객체만 포함하므로 다른 기능을 구현한 코드에 영향을 받지 않는다.
+
+service를 구분했을때, 중복해서 동일한 코드를 구현해야 한다면?
+```java
+//동일한 기능을 구현한 Helper class
+public final class MemberServiceHelper{
+  public static Member findExistingMember(MemberRepository repo, String memberId){
+    Member member = memberRepository.findById(memberId);
+    if(member == null) throw new NoMemberException(memberId);
+    return member;
+  }
+}
+
+import static com.myshop.member.application.MemberServiceHelper.*;
+
+public class changePasswordService{
+  private MemberRepository memberRepository;
+
+  public void changePassword(String memberId, String curPwd, String newPwd){
+    Member member = findExistingMember(memberRepository, memberId);
+    member.changePassword(curPwd, newPwd);
+  }
+}
+```
+구분되는 기능별로 service class를 구현하는것이 깔끔한 것 같다.
+
+#### 응용 서비스의 interface와 class
+interface가 필요한 상황? concrete class가 여러개인 경우
+
+#### method parameter & return
+응용 서비스가 제공하는 method는 필요한 값을 parameter로 전달받아야 한다.
+```java
+public class ChangePasswordService{
+  //암호 변경기능 구현에 필요한 parameter를 전달받음
+  public void changePassword(String memberId, String oldPwd, String newPwd){
+  ...
+  }
+}
+```
+- 위 코드처럼 각각을 입력받을 수 있지만, 별도 class를 만들어 전달받을 수 있다.
+```java
+public class ChangePasswordRequest{
+  private String memberId;
+  private String currentPassword;
+  private String newPassword;
+}
+```
+- 요청 parameter가 두 개 이상 존재하면 데이터 전달을 위한 class를 사용하는것이 편리하다.
+- 응답값으로는 presentation layer에서 필요한 데이터만을 반환하는 것이 로직의 응집도를 높이는 확실한 방법이다.
+- 응용 서비스에서 aggregate 전체를 전달해준다면? 코드의 응집도가 떨어진다.
+
+#### presentation layer에 의존하지 않기
+- 응용 서비스에서 presentation layer에 대한 의존이 발생하면?
+  - 응용 서비스만 단독으로 테스트하기 어려워짐
+  - 응용 서비스가 presentation layer의 역할까지 하게됨
+```java
+public class MyOrderController {
+    private OrderDetailService orderDetailService;
+
+    @RequestMapping("/my/orders")
+    public String orders(HttpServletRequest request) {
+        //응용 서비스가 presentation layer를 의존하면 안됨!!
+        orderDetailService.order(request);
+    }
+```
+- 만약에 위의 orderDetailService에서 request의 내부에 session의 값을 수정한다면?
+  - 코드의 추적이 어려워지고 응집도가 깨지게된다.
+
+#### 트랜잭션 처리
+@Transactional을 통해 트랜잭션 기능을 적극 이용하자
+
+### presentation layer
