--- a/DDD/6장.md
+++ b/DDD/6장.md
@@ -172,3 +172,36 @@ public class MyOrderController {
 @Transactional을 통해 트랜잭션 기능을 적극 이용하자
 
 ### presentation layer
+- 사용자가 시스템을 사용할 수 있는 흐름을 제공하고 제어
+- 사용자의 세션을 관리
+- 사용자의 요청을 응용 service에 전달하고 응답을 제공
+
+### 값 검증
+- 값 검증은 presentation layer, 응용 service layer 모두에서 수행할 수 있다.
+  - presentation layer: 필수 값, 값의 형식, 범위 검증
+  - 응용 service: 데이터의 존재 유무, 중복여부 검증
+
+### 권한 검사
+- presentation layer: 인증된 사용자인지 검사
+  - filter를 이용할 수 있다.
+- 응용 service: URL만으로 검증할 수 없을때 method 단위로 권한 검사 수행이 필요
+  - @PreAuthorize와 같은 method를 사용하여 검사 가능
+- domain layer: 객체 단위로 검사(복잡)
+
+### 조회 전용 기능과 응용 service
+- 서비스에서 수행하는 추가적인 로직이 없으며
+- 단일 쿼리만 실행하는 조회 전용 기능이여서 트랜잭션이 필요없다면?
+- presentation layer -> dao 호출 가능
+```java
+public class OrderController{
+  private OrderViewDao orderViewDao;
+
+  @RequestMapping("/myorders")
+  public String list(ModelMap model){
+    String orderId = SecurityContext.getAuthentication().getId();
+    List<OrderView> orders = orderViewDao.selectByOrderer(ordererId);
+    model.addAttribute("orders", orders);
+    return "order/list";
+  } 
+}
+```
