--- a/DDD/7장.md
+++ b/DDD/7장.md
@@ -1,2 +1,115 @@
 # Domain service
 ### 여러 Aggregate가 필요한 기능
+- domain 영역의 코드를 작성하다보면 한 aggregate로 기능을 구현할 수 없는 경우가 있다.
+- ex) 결제 금액 계산로직
+```
+상품: 구매하는 상품의 가격, 배송비가 필요
+주문: 상품별로 구매개수와 가격이 필요
+할인 쿠폰: 쿠폰별 지정한 할인금액의 계산이 필요
+회원: 회원 등급에 따른 할인 계산이 필요
+```
+- 이러한 경우 도메인 기능을 별도의 서비스로 구현하는 방법이 가장 쉬운 해결 방법이다.
+
+### Domain service
+#### 계산 logic과 domain service
+- Domain service는 Domain 영역에 위치한 로직을 표현할 때 사용한다.
+  - 계산 logic: 한 aggregate에 넣기에는 애매한 복잡한 계산
+  - 외부 시스템 연동이 필요한 domain logic: 타 시스템을 이용해야하는 logic
+- state가 없이 logic만 구현한다.
+
+```java
+//domain service
+public class DiscountCalculationService{
+
+  public Money calculateDiscountAmounts(
+  List<Orderline> orderLines,
+  List<Coupon> coupons,
+  MemberGrade grade){
+
+  Money couponDiscount =
+    coupons.stream()
+      .map(coupon -> calcualteDiscount(coupon))
+      .reduce(money(0),(v1, v2) -> v1.add(v2));
+
+  Money membershipDiscount =
+    calculateDiscount(orderer.getMember().getGrade());
+
+  return couponDiscount.add(membershipDiscount);
+  }
+  ...
+}
+```
+
+- 위의 계산 domain service를 사용하는 주체는 aggregate가 될 수도 있고, application service가 될 수 있다.
+- 우리는 aggregate에서 사용하도록 만들어 보자.
+
+```java
+//aggregate
+public class Order{
+  //상태를 바꿈
+  public void caculateAmounts(
+    DiscountCalculationService disCalSvc, MemberGrade grade
+  ){
+    Money totalAmounts = getTotalAmounts();
+    Money discountAmounts =
+      disCalSvc.calculateDiscountAmounts(this.orderLines, this.coupons, grade);
+
+    this.paymentAmounts = totalAmounts.minus(discountAmounts);
+  }
+}
+```
+
+- 주문의 총 계산을 하는 aggregate의 logic이다.
+- 여기서 DiscountCalculationService를 **aggregate에 주입하지 않았다.**
+- 파라미터로 받은 이유는, 데이터 자체와 관련이 없는 데이터이며, calculateDiscountAmounts라는 method 일부만 필요하기 때문이다.
+- 응용 service에서 이를 사용해보자
+
+```java
+//응용 service
+public class OrderService{
+  private DiscountCalculationService discountCalculationService;
+
+  @Transactional
+  public OrderNo placeOrder(OrderRequest orderRequest){
+    OrderNo orderNo = orderRepository.nextId();
+    Order order = createOrder(orderNo, orderRequest);
+    orderRepository.save(order);
+    return order;
+  }
+
+  private Order createOrder(OrderNo orderNo, OrderRequest, orderReq){
+    Member member = findMember(orderReq.getOrdererId());
+
+    Order order = new Order(orderNo, orderReq.getOrderLines()
+      orderReq.getCoupons(), createOrderer(member),
+      orderReq.getShippingInfo()
+    );
+
+    //aggregate에 domain service 전달
+    order.caculateAmounts(
+      this.discountCalculationService, member.getGrade()
+    );
+    return order;
+  }
+}
+```
+
+- 위의 예제처럼 응용 service에서 aggregate에 domain service를 전달할 수 있다.
+- aggregate에 domain service를 전달하지 않고, domain service에 aggregate를 전달하기도 한다.
+
+```java
+//domain service
+public class TransferSerrvice{
+
+  public void transfer(Account fromAccount, Account toAccount, Money amounts){
+    fromAccount.withdraw(amounts);
+    toAccount.credit(amounts);
+  }
+}
+```
+
+domain service인지 응용 service인지 구분이 애매하면?
+- 상태를 변경하거나 계산이 있으면서(domain logic)
+- 한 aggregate에 넣기가 애매하면 domain service로 만들자
+
+#### 외부 시스템 연동과 도메인 서비스
