--- a/DDD/7장.md
+++ b/DDD/7장.md
@@ -113,3 +113,26 @@ domain service인지 응용 service인지 구분이 애매하면?
 - 한 aggregate에 넣기가 애매하면 domain service로 만들자
 
 #### 외부 시스템 연동과 도메인 서비스
+- 외부 시스템, 타 도메인과의 연동 기능도 도메인 서비스가 될 수 있다.
+```java
+//설문조사간 권한을 조회하는 domain service
+public interface SurveyPermissionChecker{
+  boolean hasUserCreationPermission(String userId);
+}
+
+//외부연동 application service
+public class CreateSurveyService{
+  private SurveyPermissionChecker permissionChecker;
+
+  public Long createSurvey(CreateSurvey req){
+    validate(req);
+    //domain service를 이용해서 외부 시스템 연동
+    if(!permissionChecker.hasUserCreationPermission(req.getRequestorId())){
+      throw new NoPermissionException();
+    }
+  }
+}
+```
+
+#### domain service의 패키지 위치
+Domain service의 패키지 위치는 다른 domain 구성요소와 동일한 패키지에 위치하면 된다.
