--- a/DDD/8장.md
+++ b/DDD/8장.md
@@ -60,3 +60,21 @@ public class Order {
 ``` 
 - Update쿼리를 수행하려할때 수정된 row의 개수가 0이면? 누군가 앞서 데이터를 수정한 것이다.
 - 이때 OptimisticLockingFailureException이 발생한다.
+
+#### 강제 version 증가
+- aggregate의 구성요소 중 일부 값이 바뀌면? aggregate는 바뀐 것
+- 내부의 entity의 version이 바뀌게 되면 root aggregate의 version도 증가가 필요하다.
+- LockModeType.OPTIMISTIC_FORCE_INCREMENT를 사용하면 root entity가 아닌 내부 entity의 version이 변하더라도 값을 증가시켜준다.
+
+### 오프라인 pessimistic lock
+- 여러 트랜잭션에 걸친 동시 변경을 막는다.
+- 만약 lock을 실행한채로 해제를 하지않고 프로그램을 종료한다면 다른 사용자는 영원히 lock을 얻을 수 없다.
+- 이를 해결하기 위해, lock 유효기간을 가져야한다.
+```java
+public interface LockManager {
+    LockId tryLock(String type, String id) throws LockException;
+    void checkLock(LockId lockId) throws LockException;
+    void releaseLock(LockId lockId) throws LockException;
+    void extendLockExpiration(LockId lockId, long inc) throws LockException;
+}
+```
