--- a/DDD/9장.md
+++ b/DDD/9장.md
@@ -6,3 +6,15 @@
 - 모델은 특정한 context에서 완전한 의미를 갖는데, 이를 bounded context라고 한다.
 
 ### bounded context
+- bounded contextsms domain model을 구분하는 경계이다.
+- 구현하는 하위 domain에 알맞은 모델을 포함한다
+
+### bounded context 구현
+- presentation layer, application layer, domain layer, infrastructure를 통틀어 bounded context로 포함한다.
+- 간단한 기능을 하는 domain의 경우에는 domain방식으로 구현하지 않고, 간단한 CRUD으로 구현해도 된다.(dao 방식)
+- domain 방식과 dao를 이용한 간단한 조회가 혼합된 방식으로 CQRS(Command Query Responsibility Segregateion)방식이 있다.
+
+### bounded context간 통합
+- Rest API를 통해 직접통합
+- 메세지 큐, kafka를 이용하여 간접통합
+  - 간접 통합시 누가 제공하느냐에 따라 데이터 구조가 결정된다.
