--- a/DDD/10장.md
+++ b/DDD/10장.md
@@ -29,5 +29,80 @@ public void Order{
 
 ### event
 - "과거에 벌어진 어떤 것"을 의미하며, 원하는 동작을 수행하는 기능을 한다.
-- 이벤트 관련 구성요소
+#### 이벤트 관련 구성요소
   - event 생성 주체(entity, value, domain service) -> event dispatcher -> event handler
+#### 이벤트의 구성
+```java
+public class ShippingInfoChangedClassEvent{
+  private String orderNumber;
+  private long timeStamp;
+  private ShippingInfo newShippingInfo;
+}
+```
+- 클래스의 이름을 보면 `changed` 라는 과거시제를 사용함
+- 이벤트는 현재 기준으로 과거에 벌어진것을 표현하므로 과거시제를 사용
+- 이벤트는 handler가 작업을 수행하는데 필요한 데이터를 담아야한다. 없다면 API호출, DB호출을 통해서 데이터 로딩이 필요
+```java
+//dispatcher method
+public void changeShippingInfo(ShippingInfo newShippingInfo) {
+    verifyNotYetShipped();
+    setShippingInfo(newShippingInfo);
+
+    //handler 호출!
+    Events.raise(new ShippingInfoChangedEvent(number, newShippingInfo));
+}
+
+//handler method
+@EventListener(ShippingInfoChangedEvent.class)
+public void handle(ShippingInfoChangedEvent evt){
+  //이벤트가 필요한 데이터가 없다면?
+  //API 조회 혹은 DB접근을 통해 데이터 조회가 필요
+  Order order = orderRepository.findById(evt.getOrderNo());
+  shippingInfoSynchronizer.sync(
+    order.getNumber().getValue(),
+    order.getShippingInfo()
+  );
+}
+```
+#### 이벤트의 용도
+- 두가지 용도로 쓰인다.
+  - domain의 상태가 바뀔때, trigger 용도(알림톡, sms 예약 전송 등)
+  - 서로 다른 시스템간의 데이터 동기화(배송지 변경시 외부 서비스에 해당 정보 전송을 위해)
+#### 이벤트 장점
+- 서로 다른 domain logic이 섞이는것을 막을 수 있다.
+- 기능 확장이 용이하다.
+
+### 이벤트, handler, dispatcher 구현
+- 이벤트의 명명규칙은?
+  - 접미사로 Event사용하기: OrderCancelEvent
+  - 간결함을 위해 과거 시제만을 사용하기: OrderCanceled
+- 이벤트의 publish를 위해서는?
+  - spring에서 제공하는 ApplicationEventPublisher 사용하기
+```java
+public class Events {
+    private static ApplicationEventPublisher publisher;
+
+    static void setPublisher(ApplicationEventPublisher publisher) {
+        Events.publisher = publisher;
+    }
+
+    public static void raise(Object event) {
+        if (publisher != null) {
+            publisher.publishEvent(event);
+        }
+    }
+}
+```
+- 이렇게 만든 event 처리의 흐름은 다음과 같다
+1. 도메인 기능을 실행한다.
+2. 이벤트handler에 의해 Event.raise()를 호출하여 이벤트를 호출한다.
+3. ApplicationHandler에 의해 이벤트를 publish한다.
+4. @EventListener로 받은 dispatcher에 의해 method가 실행된다.
+
+### 동기 이벤트 처리 문제
+- 외부 서비스의 성능저하가 생긴다면? 예외가 발생한다면?
+  - 비동기 처리
+  - 트랜잭션 처리
+
+### 비동기 이벤트 처리
+- 
