--- a/DDD/10장.md
+++ b/DDD/10장.md
@@ -105,4 +105,17 @@ public class Events {
   - 트랜잭션 처리
 
 ### 비동기 이벤트 처리
-- 
+- 즉시 실행이 필요없는 경우에 적용가능한 처리방법
+  - 로컬 handler를 비동기로 실행하기
+  - message queue 사용하기
+  - 이벤트 저장소와 이벤트 fowarder 사용하기
+  - 이벤트 저장소와 이벤트 제공 api 사용하기
+#### 로컬 handler를 비동기로 실행하기
+- eventHandler를 @Async를 통해 별도 thread로 실행하는 방법이다.
+#### message queue 사용하기
+- kafka나 rabbit MQ를 이용
+#### 이벤트 저장소와 이벤트 fowarder 사용하기, 이벤트 저장소와 이벤트 제공 api 사용하기
+- db에 일단 저장해둔 뒤 별도의 프로그램을 이용해 event handler에 전달
+- outbox pattern과 같이 처리하거나 배치형식으로 받거나...
+
+### 이벤트 적용 시 추가 고려사
