--- a/DDD/7장.md
+++ b/DDD/7장.md
@@ -135,4 +135,8 @@ public class CreateSurveyService{
 ```
 
 #### domain service의 패키지 위치
-Domain service의 패키지 위치는 다른 domain 구성요소와 동일한 패키지에 위치하면 된다.
+- Domain service의 패키지 위치는 다른 domain 구성요소와 동일한 패키지에 위치하면 된다.즉, 도메인 서비스는 도메인 영역에 위치해야한다.
+- 도메인 서비스의 개수가 많거나 엔티티나 밸류와 같은 다른 구성요소와 명시적으로 구분하고 싶다면 domain 패키지 밑에 하위 패키지를 구분해서 위치시켜도 된다.
+  - domain.model
+  - domain.service
+  - domain.repository
