--- a/DDD/10장.md
+++ b/DDD/10장.md
@@ -110,12 +110,25 @@ public class Events {
   - message queue 사용하기
   - 이벤트 저장소와 이벤트 fowarder 사용하기
   - 이벤트 저장소와 이벤트 제공 api 사용하기
+
 #### 로컬 handler를 비동기로 실행하기
 - eventHandler를 @Async를 통해 별도 thread로 실행하는 방법이다.
+
 #### message queue 사용하기
 - kafka나 rabbit MQ를 이용
+
 #### 이벤트 저장소와 이벤트 fowarder 사용하기, 이벤트 저장소와 이벤트 제공 api 사용하기
 - db에 일단 저장해둔 뒤 별도의 프로그램을 이용해 event handler에 전달
 - outbox pattern과 같이 처리하거나 배치형식으로 받거나...
 
-### 이벤트 적용 시 추가 고려사
+### 이벤트 적용 시 추가 고려사항
+- 이벤트 주체에 대한 정보를 추가할지 고려가 필요함(누가 이벤트를 호출했는지와 같은)
+- 전송실패에 대한 보상처리?
+  - ex) 3회 실패하면 해당 이벤트는 생략하고 다른 이벤트를 전송
+- 이벤트 손실에대한 보상처리?
+  - 저장소를 이용해 트랜잭션으로 처리할것인지
+  - local handler를 이용한 비동기로 처리하게되면 이벤트가 유실됨
+- 이벤트 순차처리
+- 이벤트 재처리
+  - ex) 동일한 이벤트 id가 들어오게되면 처리를 안함
+- @TransactionalEventListener를 통해 이벤트 핸들러를 트랜잭션의 상태에 따라 처리할 수 있게 해준다.
